--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body,td,th {
           </div></td>
         </tr>
       </table>
-      <pre><div align="left"><a href="https://chmod.cl">.cl</a> / <a href="https://chmod.ws">.ws</a> / <a href="http://75p432xfsrjxchuh.onion">.onion</a>
+      <pre><div align="left"><a href="https://chmod.freed0m4all.net">chmod.freed0m4all.net</a>
 </pre>
 <hr>
       <div align="right">
