--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body,td,th {
 <hr>
       <div align="right">
         <pre>
-<a href="#contacto">CONTACTO</a> / <a href="#donde">DONDE?</a> / <a href="#weblog">WEBLOG</a> / <a href="/archivo">ARCHIVO</a> / <a href="#info">TU INFO</a></pre>
+<a href="#contacto">CONTACTO</a> / <a href="#weblog">WEBLOG</a> / <a href="/archivo">ARCHIVO</a> / <a href="#info">TU INFO</a></pre>
       </div>
 <hr>
       <hr>
@@ -67,18 +67,8 @@ body,td,th {
 <a name="contacto"></a>
 Contacto.
 
-Mail: im(at)chmod.ws <a href="https://keyserver2.pgp.com/vkd/DownloadKey.event?keyid=0x4A940A1C894D4146">PGP Key</a><br>
-Jabber: chmod(at)jabber.ccc.de <a href="https://archivo.chmod.ws/keys/jabberkey.txt">OTR</a><br>
-KeyBase: <a href="https://keybase.io/chmod">chmod</a>
-      </pre>
-      <hr>
-      <pre>
-<a name="donde"></a>
-Donde estoy? IRC.
-
-<a href="irc://irc.freed0m4all.net/freed0m4all">irc.freed0m4all.net</a>
-
-Nick: chmod.
+Mail: chmod(at)freed0m4all.net <a href="https://keyserver2.pgp.com/vkd/DownloadKey.event?keyid=0x4A940A1C894D4146">PGP Key</a><br>
+KeyBase: <a href="https://keybase.io/chmod">chmod</a> /needs update/
       </pre>
       <hr>
       <pre>
@@ -87,8 +77,6 @@ Webs informativas y de servicios.
 
 <a href="https://freed0m4all.net">https://freed0m4all.net</a> Servicio IRCd, WWW.
 
-<a href="https://blackznc.net">https://blackznc.net</a> Servicio bouncers ZNC. 
-
 <a href="http://telecomix.org">http://telecomix.org</a> Dataporn, Cryptosex. 
       </pre>
       <hr>
@@ -96,7 +84,7 @@ Webs informativas y de servicios.
 <a name="weblog"></a>
 Mi weblog.
 
-<a href="http://blog.chmod.ws">FTW!!!</a>
+<a href="http://chmodlog.freed0m4all.net">FTW!!!</a>
       </pre>
       <hr>
       <pre>
