--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@ body,td,th {
 Contacto.
 
 Mail: chmod(at)freed0m4all.net <a href="https://keyserver2.pgp.com/vkd/DownloadKey.event?keyid=0x4A940A1C894D4146">PGP Key</a><br>
-KeyBase: <a href="https://keybase.io/chmod">chmod</a> /needs update/
+KeyBase: <a href="https://keybase.io/chmod">chmod</a> /needs update/Fuck keybase tho
       </pre>
       <hr>
       <pre>
 
 Webs informativas y de servicios.
 
-<a href="https://freed0m4all.net">https://freed0m4all.net</a> Servicio IRCd, WWW.
+<a href="https://freed0m4all.net">https://freed0m4all.net</a> WWW <3.
 
 <a href="http://telecomix.org">http://telecomix.org</a> Dataporn, Cryptosex. 
       </pre>
@@ -142,11 +142,11 @@ Tu info.
             <td width="15%">&nbsp;</td>
             <td width="20%"><a href="http://telecomix.org"><img name="" src="img/telecomix.png" width="50" height="50" alt=""></a></td>
             <td width="20%"><a href="https://freed0m4all.net"><img name="" src="img/logo.png" width="50" height="50" alt=""></a></td>
-            <td width="20%"><a href="http://www.kopimi.com/kopimi/"><img name="" src="img/kopimi.png" width="50" height="50" alt=""></a></td>
+            <td width="20%"><a href="https://s1-streisand.freed0m4all.net/kopimi.com/kopimi/"><img name="" src="img/kopimi.png" width="50" height="50" alt=""></a></td>
           </tr>
         </table>
       </div>
-<div align="right"><h6><a href="http://www.kopimi.com/kopimi">KOPIMI</a> 2016.</h6></div></td>
+<div align="right"><h6><a href="https://s1-streisand.freed0m4all.net/kopimi.com/kopimi">KOPIMI</a> 2020.</h6></div></td>
   </tr>
 </table>
 </body>
