--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@ body,td,th {
 <a name="contacto"></a>
 Contacto.
 
-Mail: chmod(at)freed0m4all.net <a href="https://keyserver2.pgp.com/vkd/DownloadKey.event?keyid=0x4A940A1C894D4146">PGP Key</a><br>
-KeyBase: <a href="https://keybase.io/chmod">chmod</a> /needs update/Fuck keybase tho
+Mail: chmod(at)freed0m4all.net <a href="2A509718.asc">PGP Key</a><br>
       </pre>
       <hr>
       <pre>
