--- a/archivo/index.html
+++ b/archivo/index.html
@@ -7,7 +7,7 @@
         const data = await response.json();
         let htmlString = '<ul>';
         for (let file of data) {
-          htmlString += `<li><a href=${file.name}</a></li>`;
+          htmlString += `<li><a href="${file.path}"</a></li>`;
         }
         htmlString += '</ul>';
         document.getElementsByTagName('body')[0].innerHTML = htmlString;
