--- a/404.html
+++ b/404.html
@@ -2,10 +2,10 @@
     <html>
     <head>
     <meta charset='utf-8'>
-    <link rel="stylesheet" type="text/css" href="../css/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="../css/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="https://chmod.freed0m4all.net/css/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="https://chmod.freed0m4all.net/css/pygment_trac.css" media="screen" />
     <title>Error!</title>
-    <link href="../img/favicon.gif" rel="icon" type="image/x-icon" />
+    <link href="https://chmod.freed0m4all.net/img/favicon.gif" rel="icon" type="image/x-icon" />
     <style type="text/css">
     body,td,th {
     font-family: Verdana, Geneva, sans-serif;
@@ -15,5 +15,5 @@
     <body>
 <h1>~/Error 404.</h1>
 <hr>
-<p align="center"><img name="" src="../img/404.png" width="40%" alt="404"></p>
+<p align="center"><img name="" src="https://chmod.freed0m4all.net/img/404.png" width="40%" alt="404"></p>
 <pre><a href="javascript:history.go(-1)">Volver.</a> </pre>
