--- a/archivo/index.html
+++ b/archivo/index.html
@@ -1,17 +1,2 @@
-<!DOCTYPE html>
-<html>
-  <body>
-    <script>
-      (async () => {
-        const response = await fetch('https://api.github.com/repos/f4all/chmod/contents/archivo/');
-        const data = await response.json();
-        let htmlString = '<ul>';
-        for (let file of data) {
-          htmlString += `<li><a href="${file.path}">${file.name}</a></li>`;
-        }
-        htmlString += '</ul>';
-        document.getElementsByTagName('body')[0].innerHTML = htmlString;
-      })()
-    </script>
-  <body>
-</html>
+<script src="https://amio.github.io/gh-index/index.js"></script>
+<div id="gh-index" repo="f4all/chmod"></div>
