--- a/archivo/index.html
+++ b/archivo/index.html
@@ -1,2 +1,10 @@
-<script src="https://amio.github.io/gh-index/index.js"></script>
-<div id="gh-index" repo="f4all/chmod"></div>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Github:larsenwork/monoid</title>
+	<script type="text/javascript" src="index.js"></script>
+</head>
+<body>
+	<div id="gh-index" repo="f4all/chmod" excludes="\.gitignore"></div>
+</body>
+</html>
