--- a/archivo/index.html
+++ b/archivo/index.html
@@ -5,6 +5,6 @@
 	<script type="text/javascript" src="index.js"></script>
 </head>
 <body>
-	<div id="gh-index" repo="f4all/chmod" excludes="\.gitignore"></div>
+	<div id="gh-index" repo="larsenwork/monoid" excludes="\.gitignore"></div>
 </body>
 </html>
