--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Webs informativas y de servicios.
 <a name="weblog"></a>
 Mi weblog.
 
-<a href="http://chmodlog.freed0m4all.net">FTW!!!</a>
+<a href="https://blog.chmod.freed0m4all.net">FTW!!!</a>
       </pre>
       <hr>
       <pre>
