--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body,td,th {
           </div></td>
         </tr>
       </table>
-      <pre><div align="left"><a href="https://chmod.freed0m4all.net">chmod.freed0m4all.net</a>
+      <pre><div align="left"><a href="https://chmod.freed0m4all.net">chmod.freed0m4all.net</a><a href="http://l6shgzqvgvhacxrfuiwbnvsosplqjbwgra7s7qos6hcrpu4kv2pqcxad.onion">l6shgzqvgvhacxrfuiwbnvsosplqjbwgra7s7qos6hcrpu4kv2pqcxad.onion</a>
 </pre>
 <hr>
       <div align="right">
